<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/surface"
    android:foregroundGravity="center">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"


                android:contentDescription="image"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/rate_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/avatar"
                app:layout_constraintStart_toStartOf="@+id/avatar"
                app:srcCompat="@drawable/circle" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/rate_circle"
                app:layout_constraintEnd_toEndOf="@+id/rate_circle"
                app:layout_constraintStart_toStartOf="@+id/rate_circle"
                app:layout_constraintTop_toTopOf="@+id/rate_circle" />

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar" />

            <ImageView
                android:id="@+id/language_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"

                app:layout_constraintBottom_toBottomOf="@+id/languages"


                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/languages"
                app:srcCompat="@drawable/ic_outline_language_24" />

            <TextView
                android:id="@+id/languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/languages"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/language_icon"
                app:layout_constraintTop_toBottomOf="@+id/name_text" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_regular"
                android:letterSpacing="0"
                android:text="@string/choose"
                android:textAllCaps="false"
                android:textColor="@color/purple_200"
                app:iconTint="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/languages"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/languages" />

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                app:layout_constraintBottom_toBottomOf="@+id/user_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_location"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/user_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/languages"
                android:textColor="@color/white"

                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/location_icon"
                app:layout_constraintTop_toBottomOf="@+id/languages" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_regular"
                android:letterSpacing="0"
                android:text="@string/choose"
                android:textAllCaps="false"
                android:textColor="@color/purple_200"
                app:iconTint="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/user_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_location" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_location" />

            <Button
                android:id="@+id/quest_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/elevation_overlay_4dp"
                android:elevation="4dp"
                android:fontFamily="@font/inter_medium"
                android:foregroundGravity="center_vertical"
                android:text="@string/button_1_text"
                app:cornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/people_button"
                app:layout_constraintTop_toBottomOf="@+id/rcview"
                app:strokeColor="@color/purple_200"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/people_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/elevation_overlay_4dp"
                android:elevation="4dp"
                android:fontFamily="@font/inter_medium"
                android:foregroundGravity="center_vertical"
                android:text="@string/button_2_text"
                app:cornerRadius="4dp"
                app:layout_constraintEnd_toStartOf="@+id/quest_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rcview"
                app:strokeColor="@color/purple_200"
                app:strokeWidth="1dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/aboutMe_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/white_60"
                app:boxBackgroundColor="@color/surface"
                app:counterEnabled="true"
                app:counterMaxLength="300"
                app:counterTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/people_button">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/aboutMe_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:maxLength="300"
                    android:hint="@string/input_aboutMe"
                    android:text="@string/aboutMe"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/dreamAndGet_switch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_regular"
                android:outlineSpotShadowColor="@color/purple_200"
                android:text="@string/switch_DaG"
                android:textColor="@color/white"

                android:textSize="16sp"
                android:theme="@style/MySwitch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutMe_layout" />

            <Button
                android:id="@+id/wishes_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/elevation_overlay_4dp"
                android:elevation="4dp"
                android:fontFamily="@font/inter_medium"
                android:foregroundGravity="center_vertical"
                android:text="@string/wishes"
                app:cornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dreamAndGet_switch"
                app:strokeColor="@color/purple_200"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/moments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_regular"

                android:text="@string/moments"
                android:textColor="@color/purple_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wishes_button" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcview_moments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/moments" />

            <TextView
                android:id="@+id/chronicles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/chronicles"
                android:textColor="@color/purple_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rcview_moments" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcview2"
                android:layout_width="match_parent"
                android:layout_height="460dp"

                android:layout_marginStart="14dp"

                android:layout_marginTop="12dp"
                android:layout_marginEnd="14dp"
                android:foregroundGravity="top|center"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chronicles">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>